--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                     <div class="col-md-6 col-sm-6 mt-2"> <!-- Adjusted width to 50% -->
                         <ul class="list-inline col-md-6 mx-auto">
                             <li class="list-inline-item"><a href="/">Home</a></li>
-                            <li class="list-inline-item"><a href="/about.html">About</a></li>
-                            <li class="list-inline-item"><a href="/contact.html">Contact</a></li>
+                            <li class="list-inline-item"><a href="about.html">About</a></li>
+                            <li class="list-inline-item"><a href="contact.html">Contact</a></li>
                         </ul>
                     </div>
 
