--- a/contact.html
+++ b/contact.html
@@ -25,14 +25,16 @@
             <div class="col-md-12 text-center">
                 <div class="row">
                     <div class="col-md-3 col-sm-3 logo"> <!-- Adjusted width to 25% -->
-                        <img class="mt-2 ms-5" src="https://pravinm.tech/assets/primary-website-logo-min-h7Goikly.png" width="70px" />
+                        <!-- <img class="mt-2 ms-5" src="https://pravinm.tech/assets/primary-website-logo-min-h7Goikly.png" width="70px" /> -->
+                        <h2 class="mt-2 mx-auto logo-text">AM</h2>
+
                     </div>
 
                     <div class="col-md-6 col-sm-6 mt-2"> <!-- Adjusted width to 50% -->
                         <ul class="list-inline col-md-6 mx-auto">
-                            <li class="list-inline-item"><a href="/">Home</a></li>
-                            <li class="list-inline-item"><a href="/about.html">About</a></li>
-                            <li class="list-inline-item"><a href="/contact.html">Contact</a></li>
+                          <li class="list-inline-item"><a href="/">Home</a></li>
+                            <li class="list-inline-item"><a href="/Portfolio/about.html">About</a></li>
+                            <li class="list-inline-item"><a href="/Portfolio/contact.html">Contact</a></li>
                         </ul>
                     </div>
             
