--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
                     <div class="col-md-6 col-sm-6 mt-2"> <!-- Adjusted width to 50% -->
                         <ul class="list-inline col-md-6 mx-auto">
-                            <li class="list-inline-item"><a href="/">Home</a></li>
+                            <li class="list-inline-item"><a href="/Portfolio/">Home</a></li>
                             <li class="list-inline-item"><a href="/Portfolio/about.html">About</a></li>
                             <li class="list-inline-item"><a href="/Portfolio/contact.html">Contact</a></li>
                         </ul>
