change image paths

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <div class="loader-wrapper">
         <div class="loader">
 
-      </div>
-      </div>
-    
+        </div>
+    </div>
+
     <div id="particles">
     </div>
     <div class="section-one" id="sticky-section">
@@ -33,7 +33,7 @@
                     <div class="col-md-3 col-sm-3"> <!-- Adjusted width to 25% -->
                         <!-- <img class="mt-2 ms-5" src="https://w7.pngwing.com/pngs/551/946/png-transparent-computer-icons-web-development-software-developer-software-development-icon-design-others-angle-text-logo.png"
                             width="70px" /> -->
-                            <h2 class="mt-2 mx-auto logo-text">AM</h2>
+                        <h2 class="mt-2 mx-auto logo-text">AM</h2>
                     </div>
 
                     <div class="col-md-6 col-sm-6 mt-2"> <!-- Adjusted width to 50% -->
@@ -65,10 +65,10 @@
                             </p>
                             <ul class="social">
                                 <li class="social-icon"><a href="/"><svg xmlns="http://www.w3.org/2000/svg" width="20"
-                                        viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2023 Fonticons, Inc.-->
-                                        <path fill="#ffffff"
-                                            d="M100.3 448H7.4V148.9h92.9zM53.8 108.1C24.1 108.1 0 83.5 0 53.8a53.8 53.8 0 0 1 107.6 0c0 29.7-24.1 54.3-53.8 54.3zM447.9 448h-92.7V302.4c0-34.7-.7-79.2-48.3-79.2-48.3 0-55.7 37.7-55.7 76.7V448h-92.8V148.9h89.1v40.8h1.3c12.4-23.5 42.7-48.3 87.9-48.3 94 0 111.3 61.9 111.3 142.3V448z" />
-                                    </svg></a></li>
+                                            viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2023 Fonticons, Inc.-->
+                                            <path fill="#ffffff"
+                                                d="M100.3 448H7.4V148.9h92.9zM53.8 108.1C24.1 108.1 0 83.5 0 53.8a53.8 53.8 0 0 1 107.6 0c0 29.7-24.1 54.3-53.8 54.3zM447.9 448h-92.7V302.4c0-34.7-.7-79.2-48.3-79.2-48.3 0-55.7 37.7-55.7 76.7V448h-92.8V148.9h89.1v40.8h1.3c12.4-23.5 42.7-48.3 87.9-48.3 94 0 111.3 61.9 111.3 142.3V448z" />
+                                        </svg></a></li>
                                 <li class="social-icon"><svg xmlns="http://www.w3.org/2000/svg" width="20"
                                         viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2023 Fonticons, Inc.-->
                                         <path fill="#ffffff"
@@ -93,8 +93,9 @@
                         </div>
                         <div class="col-md-6">
                             <!-- <img class="hero-image" -->
-                                <!-- src="https://pravinm.tech/assets/SL--hero-self-avatar-z2VAdhxv.png" width="500px" /> -->
-                                <img class="hero-image" src="https://cdn-icons-png.flaticon.com/512/4661/4661320.png" width="400px" />
+                            <!-- src="https://pravinm.tech/assets/SL--hero-self-avatar-z2VAdhxv.png" width="500px" /> -->
+                            <img class="hero-image" src="https://cdn-icons-png.flaticon.com/512/4661/4661320.png"
+                                width="400px" />
                         </div>
 
                     </div>
@@ -299,7 +300,7 @@
                     </div>
 
                     <div class="col-md-6 my-auto text-center">
-                        <img class="image-first" src="/assets/KanbanImage.png" width="80%" />
+                        <img class="image-first" src="/Portfolio/assets/KanbanImage.png" width="80%" />
                     </div>
                 </div>
 
@@ -308,7 +309,7 @@
             <div class="col-md-12">
                 <div class="row">
                     <div class="col-md-6 my-auto text-center">
-                        <img class="image-first" src="/assets/KanbanImage.png" width="80%" />
+                        <img class="image-first" src="/Portfolio/assets/KanbanImage.png" width="80%" />
 
                     </div>
 
@@ -338,50 +339,37 @@
                 <p class="skill-p">The ones that are beyond just Vanilla...</p>
             </div>
             <div class="container">
-            <div class="col-md-12 mt-4">
-                <div class="row">
+                <div class="col-md-12 mt-4">
+                    <div class="row">
 
-                    <div class="col-md-3 mx-auto">
-                        <div class="mobile">
-                            <div class="mobile-scroll-screen" id="mobile-scroll-screen">
-                                <img id="mobile-scroll-image1" class="mobile-scroll-image"
-                                src="/assets/mobile-screen.png" />
+                        <div class="col-md-3 mx-auto">
+                            <div class="mobile">
+                                <div class="mobile-scroll-screen" id="mobile-scroll-screen">
+                                    <img id="mobile-scroll-image1" class="mobile-scroll-image"
+                                        src="/Portfolio/assets/mobile-screen.png" />
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-md-6 my-auto">
-                        <div class="laptop ">
-                            <div class="scroll-lap mx-auto" id="scroll-lap">
-                                <img id="scroll-image1" class="scroll-image"
-                                    src="/assets/laptop-screen.png" />
-                                <!-- <img id="scroll-image2" class="scroll-image"
+                        <div class="col-md-6 my-auto">
+                            <div class="laptop ">
+                                <div class="scroll-lap mx-auto" id="scroll-lap">
+                                    <img id="scroll-image1" class="scroll-image" src="/Portfolio/assets/laptop-screen.png" />
+                                    <!-- <img id="scroll-image2" class="scroll-image"
                                     src="https://pravinm.tech/assets/SL--befit-desktopDesign-min-WBF7W6pF.jpg" /> -->
-                            </div>
+                                </div>
 
+                            </div>
+                        </div>
+                        <div class="col-md-3 p-4 my-auto">
+                            <p class="header-text ">My design portfolio features a collection of projects that
+                                demonstrate my
+                                proficiency in creating visually striking and user-friendly experiences.
+                            </p>
                         </div>
                     </div>
-                    <div class="col-md-3 p-4 my-auto">
-                        <p class="header-text ">My design portfolio features a collection of projects that demonstrate my
-                            proficiency in creating visually striking and user-friendly experiences. 
-                        </p>
-                    </div>
 
-                  
-                    <!-- <div class="col-md-3 section-border">
-                                    <div class="section-mobile-lap text-light">
-                                        <div class="my-2">
-                                            <a href="#scroll-image1">1. Exploria</a>
-                                        </div>
-                                        <div class="my-3">
-                                            <a href="#scroll-image2">2. BeFit</a>
-                                        </div>
-
-                                    </div>
-                                </div> -->
                 </div>
-
             </div>
-        </div>
         </div>
 
 
@@ -426,7 +414,7 @@
 
                     </ul>
 
-                    <hr/>
+                    <hr />
                     <p class="col-md-4 mx-auto">© Copyright 2023. Made by Abhishek Malviya</p>
                 </footer>
             </div>
@@ -435,7 +423,11 @@
     </div>
 
     <a class="backup-btn" onclick="scrollToTop()">
-        <svg xmlns="http://www.w3.org/2000/svg" width="20" viewBox="0 0 384 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path fill="#ffffff" d="M214.6 41.4c-12.5-12.5-32.8-12.5-45.3 0l-160 160c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 141.2V448c0 17.7 14.3 32 32 32s32-14.3 32-32V141.2L329.4 246.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3l-160-160z"/></svg>
+        <svg xmlns="http://www.w3.org/2000/svg" width="20"
+            viewBox="0 0 384 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+            <path fill="#ffffff"
+                d="M214.6 41.4c-12.5-12.5-32.8-12.5-45.3 0l-160 160c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 141.2V448c0 17.7 14.3 32 32 32s32-14.3 32-32V141.2L329.4 246.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3l-160-160z" />
+        </svg>
     </a>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
