--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="container">
                 <div class="col-md-12">
                     <div class="row">
-                        <div class="col-md-6  hero-text pt-5">
+                        <div class="col-md-6 mb-5 hero-text pt-5">
                             <p class="my-self ms-2">I Am,</p>
                             <h1 class="name-text">Abhishek
                                 <br />Malviya
