--- a/index.html
+++ b/index.html
@@ -44,7 +44,14 @@
                         </ul>
                     </div>
 
-                    <div class="col-md-3 col-sm-3"></div> <!-- Adjusted width to 25% -->
+                    <div class="col-md-3 col-sm-3 mt-3"><a href="/assets/resume/Abhishek_Updated_Resume.pdf"
+                            download="Abhishek_Resume.pdf" class="resume-button px-3">Resume <svg
+                                xmlns="http://www.w3.org/2000/svg" width="20"
+                                viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+                                <path fill="#ffffff"
+                                    d="M288 32c0-17.7-14.3-32-32-32s-32 14.3-32 32V274.7l-73.4-73.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l128 128c12.5 12.5 32.8 12.5 45.3 0l128-128c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L288 274.7V32zM64 352c-35.3 0-64 28.7-64 64v32c0 35.3 28.7 64 64 64H448c35.3 0 64-28.7 64-64V416c0-35.3-28.7-64-64-64H346.5l-45.3 45.3c-25 25-65.5 25-90.5 0L165.5 352H64zm368 56a24 24 0 1 1 0 48 24 24 0 1 1 0-48z" />
+                            </svg>
+                        </a></div>
                 </div>
             </div>
 
@@ -353,7 +360,8 @@
                         <div class="col-md-6 my-auto">
                             <div class="laptop ">
                                 <div class="scroll-lap mx-auto" id="scroll-lap">
-                                    <img id="scroll-image1" class="scroll-image" src="/Portfolio/assets/laptop-screen.png" />
+                                    <img id="scroll-image1" class="scroll-image"
+                                        src="/Portfolio/assets/laptop-screen.png" />
                                     <!-- <img id="scroll-image2" class="scroll-image"
                                     src="https://pravinm.tech/assets/SL--befit-desktopDesign-min-WBF7W6pF.jpg" /> -->
                                 </div>
