--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         </ul>
                     </div>
 
-                    <div class="col-md-3 col-sm-3 mt-3"><a href="/assets/resume/Abhishek_Updated_Resume.pdf"
+                    <div class="col-md-3 col-sm-3 mt-3"><a href="/Portfolio/assets/resume/Abhishek_Updated_Resume.pdf"
                             download="Abhishek_Resume.pdf" class="resume-button px-3">Resume <svg
                                 xmlns="http://www.w3.org/2000/svg" width="20"
                                 viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
@@ -313,27 +313,45 @@
 
             </div>
 
-            <div class="col-md-12">
+            <div class="col-md-12 my-3">
                 <div class="row">
                     <div class="col-md-6 my-auto text-center">
-                        <img class="image-first" src="/Portfolio/assets/KanbanImage.png" width="80%" />
+                        <img class="image-first" src="/Portfolio/assets/Admin HomePage.png" width="80%" />
 
                     </div>
 
-                    <div class="col-md-6 project2-text">
+                    <div class="col-md-6 project2-text ">
                         <img class="image1"
-                            src="https://store-images.s-microsoft.com/image/apps.42488.14428884777513921.1d09faf5-d587-4e72-93dc-5d22e7339b16.56680634-64bc-40a4-ad7d-719802ad99f3"
+                            src="https://cdn-icons-png.flaticon.com/512/7068/7068006.png"
                             width="50" />
-                        <p class="body_text_500 text-light">A very modern-looking <span
-                                class="word_highlight_1">frontend
-                                website</span> for online furniture sales. Users can browse, sort, filter,
-                            and add items to
-                            their cart from a selection of 23 fictitious furniture products (fetched from a
-                            dummy API).</p>
+
+                        <h2 class="bold text-light">Admin Panel</h2>
+
+                        <p class="body_text_500 text-light">An advanced admin panel developed in React, leveraging microservices architecture for scalable and efficient management. Robust security measures ensure safe and reliable operations, protecting sensitive data and user interactions.</p>
+
 
                     </div>
                 </div>
                 <!-- </div> -->
+            </div>
+
+            <div class="col-md-12 ">
+                <div class="row">
+                    <div class="col-md-6 projects-text">
+                        <img class="image1"
+                            src="https://images.squarespace-cdn.com/content/v1/5a1d89e0bff2007c8d1007f5/1605889179622-D5730K19M4Y19HFCZ2U0/ff+new+logo+website.png"
+                            width="100" />
+
+                        <h2 class="bold text-light">Ecommerce Website</h2>
+                        <p class="body_text_500 text-light">A dynamic e-commerce website built for seamless online shopping, featuring user-friendly product browsing, secure checkout, and personalized recommendations. The platform supports various payment methods and ensures a smooth and engaging shopping experience.</p>
+
+                    </div>
+
+                    <div class="col-md-6 my-auto text-center">
+                        <img class="image-first" src="/Portfolio/assets/FruitWebsite.png" width="80%" />
+                    </div>
+                </div>
+
             </div>
 
 
