--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                             <h1 class="name-text">Abhishek
                                 <br />Malviya
                             </h1>
-                            <p class="header-text">As a <span class="middle-text">Freelance Developer</span> and <span
+                            <p class="header-text">As a <span class="middle-text">Full Stack Developer</span> and <span
                                     class="middle-text">Web Designer</span>, I bring a blend of <span
                                     class="middle-text">Technical Expertise</span> and creative flair to deliver dynamic
                                 and visually appealing online solutions.
